Fixed CSS so 6th question doesn't wrap around

--- a/_engine/css/widget.less
+++ b/_engine/css/widget.less
@@ -149,7 +149,7 @@ html, body {
 		.question {
 			float: left;
 			font-family: sans-serif;
-			margin: 0 0 0 10px;
+			margin: 0 0 0 5px;
 			height: 90px;
 			width: 90px;
 			text-align: center;
